# simli-client-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  simli.py  test.py  testLivekit.py  test_audio.raw
simli/: __init__.py  daily_renderer.py  livekit_renderer.py  renderers.py  simli.py  utils.py
