[project]
name = "simli-ai"
version = "0.1.13"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "aiortc",
    "websockets",
    "httpx",
    "numpy",
    "av>=14.2.0",
]

[project.optional-dependencies]
local = [
    "opencv-python",
    "pyaudio",
]
daily = [
    "daily-python>=0.13.0",
]
livekit = [
    "livekit-api>=0.8.0",
    "livekit>=0.18.1",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv",
    "ruff",
    "uv",
]

[project.urls]
"Homepage" = "https://github.com/simliai/simli-client-py"
"Bug Reports" = "https://github.com/simliai/simli-client-py/issues"
"Source" = "https://github.com/simliai/simli-client-py"
